--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -11,35 +11,21 @@ h1, h2, h3, .overlay-link, button, .nav-link {
   color: white; }
 
 h1 {
-  font-size: 2.5em; }
-  h1.outline {
-    border: 4px solid white;
-    padding: 30px; }
+  font-size: 2.2em; }
+  h1.headline {
+    font-size: 2.6em;
+    font-weight: bold; }
 
 h3 {
   font-size: 1.3em;
   color: white; }
 
-.navigation-row {
-  display: flex;
-  justify-content: center;
-  /*width: 100%;*/
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0; }
+a {
+  text-decoration: none; }
 
-.navigation-link {
-  width: 80px;
-  height: 80px;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /*border-radius: 50%;*/
-  box-shadow: 0 3px 6px #333;
-  margin: 10px; }
+.active-link {
+  color: grey;
+  border-bottom: 1px solid grey !important; }
 
 .navbar {
   z-index: 20000;
@@ -60,12 +46,17 @@ h3 {
     display: flex;
     align-content: center;
     justify-content: center;
-    float: right;
-    background: #333;
-    padding: 10px 20px;
-    max-width: 700px; }
+    padding: 20px; }
     .navbar .nav-links .nav-link {
-      margin-right: 5px; }
+      margin-right: 10px;
+      font-family: Roboto;
+      cursor: pointer;
+      transition: all 400ms;
+      padding-bottom: 5px;
+      border-bottom: 1px solid white; }
+      .navbar .nav-links .nav-link:hover {
+        color: grey;
+        border-color: grey; }
 
 .overlay {
   z-index: 10000;
@@ -95,38 +86,171 @@ h3 {
 .overlay-link:hover {
   border-color: #333; }
 
-.main-section {
+.main-section.half-size {
+  height: 10vh !important; }
+
+.main-section.home {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/brenda-website.appspot.com/o/19197575_10209781557711358_825897358_o.jpg?alt=media&token=e206a910-0b30-4b69-9847-0c8ef9aa935f");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
-  overflow: hidden; }
-  .main-section.half-size {
-    height: 50vh; }
+  overflow: hidden;
+  position: relative; }
+
+.main-section.characters {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative; }
+
+.main-section.cast {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative; }
+
+.main-section.packages {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative; }
+
+.main-section.book-party {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative; }
+
+.main-section.contact {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative; }
+
+.main-section.gallery {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("http://wallpapercave.com/wp/3Qj8SxR.jpg");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative; }
+
+.main-section.gallery-list {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("http://wallpapercave.com/wp/3Qj8SxR.jpg");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative;
+  height: auto; }
 
 .content-section .content-body {
   max-width: 1000px;
   margin: 0 auto;
   padding: 10px 30px; }
 
-.gallery-section {
+.gallery-list-section {
   column-count: 3;
-  column-gap: 0px;
+  column-gap: 10px;
   max-width: 1000px;
-  margin: 0 auto; }
-  .gallery-section img {
-    display: block;
+  margin: 90px auto 30px auto; }
+  .gallery-list-section img {
     height: auto;
     width: 100%;
-    margin: 30px;
-    box-shadow: 0px 3px 5px #333;
+    margin: 10px 0 0 0;
+    cursor: pointer;
+    overflow: hidden; }
+
+.gallery-section {
+  width: 100%;
+  height: 90vh;
+  margin: 0 auto;
+  text-align: center; }
+  .gallery-section .gallery-button {
+    position: fixed;
+    width: 100px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
     cursor: pointer; }
-    .gallery-section img:hover {
-      box-shadow: 0px 6px 9px #333; }
+    .gallery-section .gallery-button.next {
+      top: 0;
+      bottom: 0;
+      right: 0; }
+    .gallery-section .gallery-button.previous {
+      top: 0;
+      bottom: 0;
+      left: 0; }
+  .gallery-section img {
+    height: 100%; }
+
+.footer-section {
+  background: #333;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh; }
 
 body::-webkit-scrollbar {
   width: 1em; }
@@ -139,28 +263,31 @@ body::-webkit-scrollbar-thumb {
   outline: 1px solid slategrey; }
 
 button {
+  font-family: Roboto;
   font-size: 1.2em;
   padding: 12px 24px;
-  border: 3px solid white;
-  border-bottom: 6px solid white;
+  border: 2px solid white;
   background-color: rgba(0, 0, 0, 0.1);
   outline: none;
   cursor: pointer;
   margin: 5px;
   transition: 400ms all ease-in-out; }
   button:hover {
-    background: lightgray; }
+    background: lightgray;
+    color: #333;
+    border-color: #333; }
 
 .button-row {
   display: flex;
   justify-content: center;
   align-items: center; }
 
-.logo-container img {
-  -ms-transform: rotate(7deg);
-  -webkit-transform: rotate(7deg);
-  transform: rotate(-12deg);
-  width: 350px; }
+.logo-container {
+  text-align: center; }
+  .logo-container img {
+    padding: 20px 0;
+    margin: 0 auto;
+    width: 80%; }
 
 .parallax-container {
   height: 100vh;
