--- a/src/sass/base/reset.css
+++ b/src/sass/base/reset.css
@@ -11,11 +11,18 @@ h1, h2, h3, .overlay-link, button, .nav-link {
   color: white; }
 
 h1 {
-  font-size: 2.5em; }
-  h1.outline {
-    border: 4px solid white;
-    padding: 30px; }
+  font-size: 2.2em; }
+  h1.headline {
+    font-size: 2.6em;
+    font-weight: bold; }
 
 h3 {
   font-size: 1.3em;
   color: white; }
+
+a {
+  text-decoration: none; }
+
+.active-link {
+  color: grey;
+  border-bottom: 1px solid grey !important; }
