--- a/src/sass/base/reset.scss
+++ b/src/sass/base/reset.scss
@@ -1,3 +1,5 @@
+@import "_colors.scss";
+
 body {
   margin: 0;
   padding: 0;
@@ -11,13 +13,23 @@ h1, h2, h3, .overlay-link, button, .nav-link {
   color: white; }
 
 h1 {
-  font-size: 2.5em;
-  &.outline {
-    border: 4px solid white;
-    padding: 30px;
+  font-size: 2.2em;
+
+  &.headline {
+    font-size: 2.6em;
+    font-weight: bold
   }
 }
 
 h3 {
   font-size: 1.3em;
   color: white; }
+
+a {
+  text-decoration: none;
+}
+
+.active-link {
+  color: grey;
+  border-bottom: 1px solid grey !important;
+}
