--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -1,8 +1,8 @@
 button {
+  font-family: Roboto;
   font-size: 1.2em;
   padding: 12px 24px;
-  border: 3px solid white;
-  border-bottom: 6px solid white;
+  border: 2px solid white;
   background-color: rgba(0,0,0,0.1);
   outline: none;
   cursor: pointer;
@@ -11,6 +11,8 @@ button {
 
   &:hover {
     background:lightgray;
+    color: #333;
+    border-color: #333;
   }
 
 }
