--- a/src/sass/components/menu.css
+++ b/src/sass/components/menu.css
@@ -1,24 +1,3 @@
-.navigation-row {
-  display: flex;
-  justify-content: center;
-  /*width: 100%;*/
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0; }
-
-.navigation-link {
-  width: 80px;
-  height: 80px;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /*border-radius: 50%;*/
-  box-shadow: 0 3px 6px #333;
-  margin: 10px; }
-
 .navbar {
   z-index: 20000;
   position: fixed;
@@ -38,12 +17,17 @@
     display: flex;
     align-content: center;
     justify-content: center;
-    float: right;
-    background: #333;
-    padding: 10px 20px;
-    max-width: 700px; }
+    padding: 20px; }
     .navbar .nav-links .nav-link {
-      margin-right: 5px; }
+      margin-right: 10px;
+      font-family: Roboto;
+      cursor: pointer;
+      transition: all 400ms;
+      padding-bottom: 5px;
+      border-bottom: 1px solid white; }
+      .navbar .nav-links .nav-link:hover {
+        color: grey;
+        border-color: grey; }
 
 .overlay {
   z-index: 10000;
