--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -1,2 +1,10 @@
 $black: #333;
 $blue: #524fff;
+
+$red: #d82d2d;
+$darkred: #b02121;
+
+$green: #00a950;
+$limegreen: #7ddd4d;
+
+$orange: #e79e43;
