--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -14,6 +14,7 @@
 @import "components/button.scss";
 @import "components/logo.scss";
 @import "components/parallax.scss";
+@import "components/character-card";
 
 // =======================
 // Components
