--- a/src/sass/components/menu.scss
+++ b/src/sass/components/menu.scss
@@ -8,7 +8,7 @@
   .fa {
 
     font-size: 2em;
-    color: white;
+    color: lightgrey;
     text-shadow: 1px 2px 2px #333;
     padding: 10px;
     cursor: pointer;
@@ -34,9 +34,24 @@
       padding-bottom: 5px;
       border-bottom: 1px solid white;
 
-
-      &:hover { color: grey; border-color: grey; }
+      &:hover { color: lightgrey; border-color: lightgrey; }
     }
+
+    .active-link {
+      color: lightgrey;
+      border-bottom: 1px solid $blue !important;
+    }
+  }
+
+  .nav-logo {
+    position: fixed;
+    bottom: 18px;
+    right: 10px;
+
+    img {
+      height: 30px;
+    }
+
   }
 
 }
