--- a/src/sass/components/sections.css
+++ b/src/sass/components/sections.css
@@ -157,7 +157,7 @@
     height: 100%; }
 
 .footer-section {
-  background: #333;
+  background: #524fff;
   color: white;
   display: flex;
   justify-content: center;
