--- a/src/sass/components/sections.scss
+++ b/src/sass/components/sections.scss
@@ -1,4 +1,5 @@
 @import "../helpers/mixins";
+@import "../base/colors";
 
 .main-section {
 
@@ -66,15 +67,12 @@
 
   }
 
-  img {
-    height: 100%;
-    //max-height: 1000px;
-    //width: 100%;
-  }
+  img { height: 100%; }
+
 }
 
 .footer-section {
-  background: #333;
+  background: $blue;
   color: white;
   display: flex;
   justify-content: center;
