--- a/src/sass/components/menu.css
+++ b/src/sass/components/menu.css
@@ -29,11 +29,11 @@
         color: lightgrey;
         border-color: lightgrey; }
     .navbar .nav-links .active-link {
-      color: grey;
-      border-bottom: 1px solid grey !important; }
+      color: lightgrey;
+      border-bottom: 1px solid #524fff !important; }
   .navbar .nav-logo {
     position: fixed;
-    top: 18px;
+    bottom: 18px;
     right: 10px; }
     .navbar .nav-logo img {
       height: 30px; }
