created card component and reponsive card row

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -14,7 +14,8 @@
 @import "components/button.scss";
 @import "components/logo.scss";
 @import "components/parallax.scss";
-@import "components/character-card";
+@import "components/character-card.scss";
+@import "components/card.scss";
 
 // =======================
 // Components
