--- a/src/sass/components/menu.scss
+++ b/src/sass/components/menu.scss
@@ -20,6 +20,18 @@
 
   }
 
+  .nav-button {
+    height: 30px;
+    width: 30px;
+    border: 5px solid white;
+    margin: 10px;
+    cursor: pointer;
+    transition: all 400ms ease-in-out;
+
+    &:hover {transform: rotate(-90deg); border-color: black}
+
+  }
+
   .nav-links {
 
     display: flex;
@@ -73,13 +85,13 @@
   overflow: hidden; }
 
 .overlay-link {
-  margin: 20px auto;
+  margin: 15px auto;
   padding-bottom: 10px;
   cursor: pointer;
   width: 250px;
   transition: all 250ms ease;
   border-bottom: 3px solid transparent;
-  font-size: 1.5em;
+  font-size: 1.25em;
   text-decoration: none;
   color: #333; }
 
