--- a/src/sass/components/scrollbar.scss
+++ b/src/sass/components/scrollbar.scss
@@ -4,10 +4,10 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color:lightgray;
+  background-color: darkgrey;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
+  background-color: #333;
   outline: 1px solid slategrey;
 }
