--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -20,27 +20,42 @@
 }
 
 .card {
-  max-width: 400px;
-  //width: 100%;
+  width: 400px;
+  height: 300px;
   border: 1px solid white;
   margin: 5px;
   box-shadow: 0px 2px 3px black;
   overflow: hidden;
 
+  background-size: 100% !important;
+
   position:relative;
 
-  .card-image {
-
-    height: 260px;
-    width: 400px;
-
-    img {   max-width: 400px; width: 100%; }
-
-  }
-
   .card-content {
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    h2 {
+
+      //position: absolute;
+      //top: -23px;
+      //width:200px;
+      //right: -67px;
+      //margin: 0;
+      //padding: 80px 0 0 0;
+      //background: rgba(0,0,0,0.5);
+      //text-align: center;
+      //transform: rotate(45deg);
+
+    }
+
     p {
       text-align: center;
+
     }
   }
 
