--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -17,6 +17,7 @@
 @import "components/parallax.scss";
 @import "components/character-card.scss";
 @import "components/card.scss";
+@import "components/_input.scss";
 
 // =======================
 // Views
@@ -24,6 +25,7 @@
 
 @import "views/characters-view.scss";
 @import "views/gallery-view.scss";
+@import "views/contact-view.scss";
 
 
 
