--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -1,4 +1,7 @@
 $black: #333;
+
+$transparent-black: rgba(0,0,0,0.7);
+
 $blue: #524fff;
 
 $red: #d82d2d;
@@ -8,3 +11,4 @@ $green: #00a950;
 $limegreen: #7ddd4d;
 
 $orange: #e79e43;
+
