--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -39,6 +39,11 @@
     left: 0;
     right: 0;
 
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
     h2 {
 
       //position: absolute;
