--- a/src/sass/components/sections.css
+++ b/src/sass/components/sections.css
@@ -77,7 +77,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/brenda-website.appspot.com/o/19197575_10209781557711358_825897358_o.jpg?alt=media&token=e206a910-0b30-4b69-9847-0c8ef9aa935f");
   background-color: rgba(0, 0, 0, 0.4);
   background-blend-mode: multiply;
   background-size: cover;
